push all the files

--- a/day14/api1.html
+++ b/day14/api1.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #div{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: row;
+            flex-wrap: wrap;
+            gap: 25px;
+        }
+        img{
+            height: 200px;
+            width: 200px;
+            border-radius: 100%;
+        }
+    </style>
 </head>
 <body>
+    <input type="search" name="search" id="search">
+    <button id="btn">search</button>
+    <div id="div"></div>
     <script src="api1.js"></script>
     <!-- <select name="select" id="select"></select>
     <input list="demo1">
